<resources>
    <string name="app_name">TEmplo</string>
    <string name="driver">driver</string>
    <string name="employee">employee</string>
    <string name="client">client</string>
    <string name="asseyez_vou">Asseyez-vous et profitez de votre voyage dans un trajet sûr et fiable vers votre lieu de travail</string>
    <string name="bus">bus</string>
    <string name="traffic">traffic</string>
    <string name="ignorer">Ignorer</string>
    <string name="visualisez_">Visualisez les informations concernant votre transport et sa localisation</string>
    <string name="mot_">Mot de Passe oublié ?</string>
    <string name="continuer">Continuer</string>
    <string name="nom_d_utili">E-Mail...</string>
    <string name="mot_de_pass">Mot de Passe...</string>
    <string name="powered_by">Powered By</string>
    <string name="local">local</string>
    <string name="v_rifier_le">Vérifier les différentes stations par lesquelles vous devez passer</string>
    <string name="communiquez">Communiquez vos retards avec vos passagers</string>
    <string name="menu">menu</string>
    <string name="historique_">Historique</string>
    <string name="trajet_en_c">Trajet En cours</string>
    <string name="modificatio">Modification de la station</string>
    <string name="station_de_">Station de départ...</string>
    <string name="retard_du_t">Retard du trajet :</string>
    <string name="welcome">Welcome</string>
    <string name="rate_us">Rate us</string>
    <string name="r_clamation">Réclamations</string>
    <string name="information">Informations</string>
    <string name="acceuil">Acceuil</string>
    <string name="modifier_pr">Modifier Profil</string>
    <string name="valuation_d">Évaluation du service</string>
    <string name="liste_des_s">Liste des stations</string>
    <string name="ajouter_un_">Ajouter un retard du trajet</string>
    <string name="liste_des_e">Liste des employés</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="cin">CIN</string>
    <string name="Adresse">Adresse</string>
    <string name="datnaissance">Date de Naissance</string>
    <string name="telephone">Téléphone</string>
    <string name="sara">Sara</string>
    <string name="conducteur">Conducteur</string>
    <string name="employ_">Employé</string>
    <string-array name="context_view">
        <item>ScrollView</item>
        <item>WebView</item>
    </string-array>
    <string name="reclainput">Tappez votre réclamation...</string>
    <string name="retardinput">Tappez votre cause de retard...</string>
    <string name="evalinput">Tappez votre évaluation...</string>
    <string name="pickup">PICKUP @</string>
    <string name="dd">2022/05/05</string>
    <string name="dd1">2022/05/04</string>
    <string name="dd2">2022/05/03</string>
    <string name="depart">Départ :</string>
    <string name="arrivee">Arrivée :</string>
    <string name="bouskoura">Bouskoura</string>
    <string name="technopark">Technopark</string>
    <string name="infs_trajet">Informations sur le trajet :</string>
    <string name="infs_trans">Informations sur le transport :</string>
    <string name="Station_Actuelle">Station Actuelle :</string>
    <string name="Nom_conducteur">Conducteur :</string>
    <string name="N_vehicule">Nº véhicule :</string>
    <string name="Couleur_vehicule">Couleur véhicule :</string>
    <string name="Type_vehicule">Marque véhicule :</string>
    <string name="cause">Aucun Retart pour le moment</string>
    <string name="today">Aujourd´hui</string>
    <string name="tomorrow">Demain</string>
</resources>