<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".informations_employee">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/cont"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins"
        android:text="@string/modifier_pr"
        android:textAppearance="@style/continuer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telephone"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/infos"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/information"
        android:textAppearance="@style/trajet_en_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />


    <Button
        android:id="@+id/bar"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infos"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/prenom"
        android:layout_width="268dp"
        android:layout_height="34dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/input"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/prenom"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="268dp"
        android:layout_height="34dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/nom"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenom"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/cin"
        android:layout_width="268dp"
        android:layout_height="34dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/cin"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/datenaissance"
        android:layout_width="268dp"
        android:layout_height="34dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/datnaissance"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cin"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/adresse"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/Adresse"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datenaissance"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/telephone"
        android:layout_width="268dp"
        android:layout_height="34dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/telephone"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adresse"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/loc"
        android:layout_width="71dp"
        android:layout_height="33dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/local" />

    <TextView
        android:id="@+id/pow"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/powered_by"
        android:textAppearance="@style/powered_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>