<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".connect_driver">

    <ImageView
        android:id="@+id/back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/bus"
        android:src="@drawable/vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/transimg"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/beclipse"
        android:contentDescription="@string/client"
        android:src="@drawable/location"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck"></ImageView>

    <EditText
        android:id="@+id/in1"
        android:layout_width="218dp"
        android:layout_height="34dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/input"
        android:gravity="center"
        android:hint="@string/nom_d_utili"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transimg"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/in2"
        android:layout_width="218dp"
        android:layout_height="34dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:gravity="center"
        android:hint="@string/mot_de_pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in1"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/mot_"
        android:layout_width="190dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/mot_"
        android:textAppearance="@style/mot_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/cont"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/continuer"
        android:textAppearance="@style/continuer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mot_"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>