<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".trajet_det_driver">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/trajet_en_c"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/trajet_en_c"
        android:textAppearance="@style/trajet_en_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bar"
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trajet_en_c"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pickup"
        android:background="@drawable/backgr"
        app:layout_constraintTop_toBottomOf="@+id/trajet_en_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_width="320dp"
        android:layout_height="126dp">
        <TextView
            android:id="@+id/Ppickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/pickup"
            android:textAppearance="@style/historique_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dd"
            android:textAppearance="@style/historique_"
            app:layout_constraintBaseline_toBaselineOf="@+id/Ppickup"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/Station_Actuelle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/depart"
            android:textAppearance="@style/historique_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ppickup" />

        <TextView
            android:id="@+id/stationAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/poppins"
            android:textAppearance="@style/historique_"
            app:layout_constraintBaseline_toBaselineOf="@+id/Station_Actuelle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ppickup" />

        <TextView
            android:id="@+id/arrivee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/arrivee"
            android:textAppearance="@style/historique_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Station_Actuelle" />

        <TextView
            android:id="@+id/stationArrivee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/poppins"
            android:text="@string/technopark"
            android:textAppearance="@style/historique_"
            app:layout_constraintBaseline_toBaselineOf="@+id/arrivee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stationAC" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/ajouter_un"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/ajouter_un_"
        android:textAppearance="@style/ajouter_un_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickup" />

    <EditText
        android:id="@+id/rettard"
        android:layout_width="278dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:gravity="center"
        android:hint="@string/retardinput"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajouter_un"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="36dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/station_de_"
        android:src="@drawable/arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rettard"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>