<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cond_"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/conducteur"
        android:textAppearance="@style/employ_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverimg" />

    <ImageView
        android:id="@+id/driverimg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/eclipse"
        android:contentDescription="@string/driver"
        android:src="@drawable/driver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"/>

    <TextView
        android:id="@+id/employ_"
        android:layout_width="90dp"
        android:layout_height="28dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/employ_"
        android:textAppearance="@style/employ_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeimg" />

    <ImageView
        android:id="@+id/employeimg"
        android:src="@drawable/employe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="80dp"
        android:background="@drawable/eclipse"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/employee"/>

</androidx.constraintlayout.widget.ConstraintLayout>