<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".reclamations_employee">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/reclamations"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/r_clamation"
        android:textAppearance="@style/trajet_en_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />


    <Button
        android:id="@+id/bar"
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reclamations"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recl"
        android:background="@drawable/backgr"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_width="320dp"
        android:layout_height="220dp">

        <EditText
            android:id="@+id/reclinput"
            android:hint="@string/reclainput"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:layout_height="match_parent"
            android:importantForAutofill="no" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/arrow"
        android:layout_width="36dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/station_de_"
        android:src="@drawable/arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recl"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/loc"
        android:layout_width="71dp"
        android:layout_height="33dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/location"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/local" />

    <TextView
        android:id="@+id/pow"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/powered_by"
        android:textAppearance="@style/powered_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>